# loan-eligibilty-system

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api-gateway/: .env.example  .npmrc  Dockerfile  README.md  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  tsconfig.json
api-gateway/prisma/: schema.prisma
api-gateway/src/: app.module.ts  main.ts
api-gateway/src/applicants/: applicants.controller.ts  applicants.module.ts  applicants.service.ts
api-gateway/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
api-gateway/src/common/: feature-contract.spec.ts  feature-contract.ts
api-gateway/src/prediction/: prediction.controller.ts  prediction.module.ts  prediction.service.ts
api-gateway/src/prisma/: prisma.module.ts  prisma.service.ts
inference-engine/: Cargo.toml  Dockerfile  README.md
inference-engine/models/: model.onnx
inference-engine/src/: main.rs  model.rs
inference-engine/tests/: integration.rs
ml/: README.md  requirements.txt
ml/artifacts/: comparison_table.md  cv_results.json  metrics.json  model.onnx  onnx_meta.json
ml/data/: dataset.csv
ml/src/: contract.py  evaluate.py  export_onnx.py  generate_data.py  preprocess.py  train.py
ml/tests/: test_contract.py
shap-service/: Dockerfile  README.md  app.py  requirements.txt
shap-service/artifacts/: xgb_model.json
shared/: feature-contract.json
web-client/: README.md  package.json  pnpm-lock.yaml
web-client/src/app/: page.tsx
(+9 files in other folders)
